--- a/index.html
+++ b/index.html
@@ -7,7 +7,50 @@
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
-    <header></header>
+    <header>
+      <!-- nav section starts  -->
+      <nav class="navbar">
+        <div class="nav-logo">
+          <div class="left-side">
+            <div class="logo-img">
+              <img src="./images/Group 40071 (2).png" alt="" />
+            </div>
+            <div class="logo-text">
+              <h3>Trip <span>Well</span></h3>
+            </div>
+          </div>
+          <div class="mobile-menu-bar">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="18"
+              height="12"
+              viewBox="0 0 18 12"
+              fill="none"
+            >
+              <path
+                d="M0.75 0.75H17.25M0.75 6H17.25M0.75 11.25H17.25"
+                stroke="#131318"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+          </div>
+        </div>
+        <div class="nav-items">
+          <ul>
+            <li>
+              <a href=""><span>Home</span></a>
+            </li>
+            <li><a href="">Packages</a></li>
+            <li><a href="">Testimonial</a></li>
+            <li><a href="">Blog</a></li>
+            <li><a href="">Contact</a></li>
+          </ul>
+        </div>
+      </nav>
+      <!-- nav section ends -->
+    </header>
 
     <main></main>
     <footer></footer>
