--- a/index.html
+++ b/index.html
@@ -53,7 +53,39 @@
       <!-- nav section ends -->
     </header>
 
-    <main></main>
+    <main>
+      <!-- explore section starts  -->
+      <section class="explore-section">
+        <h3>Explore Your Travel</h3>
+        <p>
+          Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor
+          adipiscing. In et odio enim ac quis sapien urna eu phasellus.
+        </p>
+        <div class="search-boxes">
+          <div class="box box-1">
+            <input type="text" placeholder="Where go" />
+          </div>
+          <div class="box box-2">
+            <select name="" id="">
+              <option value="">When</option>
+              <option value="">February</option>
+              <option value="">March</option>
+            </select>
+          </div>
+          <div class="box box-3">
+            <select name="" id="">
+              <option value="">When</option>
+              <option value="">February</option>
+              <option value="">March</option>
+            </select>
+          </div>
+          <div class="box-4">
+            <button>Find Now</button>
+          </div>
+        </div>
+      </section>
+      <!-- explore section ends  -->
+    </main>
     <footer></footer>
   </body>
 </html>
