destination section mobile  responsive finished

--- a/index.html
+++ b/index.html
@@ -126,7 +126,52 @@
           <img src="./images/Rectangle 4.png" alt="" />
         </div>
       </section>
+
       <!-- popular tours ends -->
+
+      <!-- destination section starts  -->
+
+      <section class="destination-section">
+        <div class="destination-title">
+          <h1>Choose Your Destination</h1>
+          <p>
+            Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra
+            odio sit massa. Sodales dictumst nec nibh pellentesque.
+          </p>
+        </div>
+        <div class="destination-images">
+          <div class="image image-1">
+            <h1>Maldives</h1>
+            <img src="./images/Rectangle 5.png" alt="" />
+          </div>
+          <div class="image image-2">
+            <h1>Indonesia</h1>
+            <img src="./images/Rectangle 8.png" alt="" />
+          </div>
+          <div class="image image-3">
+            <h1>Srilanka</h1>
+            <img src="./images/Rectangle 6.png" alt="" />
+          </div>
+          <div class="image image-4">
+            <h1>North America</h1>
+            <img src="./images/Rectangle 7.png" alt="" />
+          </div>
+          <div class="image image-5">
+            <h1>Kashmir</h1>
+            <img src="./images/Rectangle 9.png" alt="" />
+          </div>
+          <div class="image image-6">
+            <h1>Bangladesh</h1>
+            <img src="./images/Rectangle 11.png" alt="" />
+          </div>
+          <div class="image image-7">
+            <h1>Bandarban</h1>
+            <img src="./images/Rectangle 10.png" alt="" />
+          </div>
+        </div>
+      </section>
+
+      <!-- destination section ends -->
     </main>
     <footer></footer>
   </body>
