why-choose-section mobile responsive finished

--- a/index.html
+++ b/index.html
@@ -172,6 +172,58 @@
       </section>
 
       <!-- destination section ends -->
+
+      <!-- why choose section starts  -->
+
+      <section class="why-choose-section">
+        <div class="why-choose-desc">
+          <h1>Why Choose Us</h1>
+          <p>
+            Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra
+            odio sit massa. Sodales dictumst nec nibh pellentesque.
+          </p>
+        </div>
+        <div class="why-choose-cards">
+          <div class="two-cards">
+             <div class="card card-1">
+                <div class="image-1">
+                  <img src="./images/home.png" alt="" />
+                </div>
+                <h4>Handpicked Hotels</h4>
+                <p>
+                  Amet consectetur. Vulputate commodo felis molestie risus ornare
+                  nulla amet et. Libero commodo sagittis dignissim adipiscing
+                  quis. Habitant adipiscing risus natoque aliquet.
+                </p>
+             </div>
+             <div class="card card-2">
+                <div class="image-2">
+                  <img src="./images/home.png" alt="" />
+                </div>
+                <h4>World Class Service</h4>
+                <p>
+                  Amet consectetur. Vulputate commodo felis molestie risus ornare
+                  nulla amet et. Libero commodo sagittis dignissim adipiscing
+                  quis. Habitant adipiscing risus natoque aliquet.
+                </p>
+             </div>
+            </div>
+           <div class="bottom-card">
+              <div class="card one-card">
+               <div class="image-3"> <img src="./images/home.png" alt=""></div>
+               <h4>World Class Service</h4>
+                  <p>
+                    Amet consectetur. Vulputate commodo felis molestie risus ornare
+                    nulla amet et. Libero commodo sagittis dignissim adipiscing
+                    quis. Habitant adipiscing risus natoque aliquet.
+                  </p>
+              </div>
+           </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- why choose section ends -->
     </main>
     <footer></footer>
   </body>
