--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Trip Well</title>
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./media-queries/media-query.css" />
+    <!-- fontawosome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   </head>
   <body>
     <header>
@@ -224,6 +227,79 @@
       </section>
 
       <!-- why choose section ends -->
+
+
+      <!-- deal discount section starts  -->
+
+
+      <section class="deal-discount">
+
+        <div class="deal-discount-desc">
+          <h1>Deals & Discounts</h1>
+          <p> Amet consectetur. Vulputate commodo felis molestie risus .</p>
+
+        </div>
+        <div class="deal-discount-images">
+          <div class="image image-1">
+            <div class="float-card">
+              <div class="top-icons">
+                <i class="fa-solid fa-clock"></i>
+                <span>7 Day/6 Night</span>
+                <i class="fa-solid fa-clock"></i>
+                <span>Max : 10</span>
+                <i class="fa-solid fa-clock"></i>
+                <span>Malaysia</span>
+              </div>
+              <h4>Tour To Satorini</h4>
+             <p> Amet consectetur. Vulputate commodo felis molestie risus .</p>
+              <h4 class="text-orange">Price: $1300-$1500</h4>
+              <div class="middle-desc"></div>
+              <button>Book Now</button>
+            </div>
+          </div>
+          <div class="image image-2">
+            <div class="float-card">
+              <div class="top-icons">
+                <i class="text-orange fa-solid fa-clock"></i>
+                <span>7 Day/6 Night</span>
+                <i class="fa-solid fa-clock"></i>
+                <span>Max : 10</span>
+                <i class="fa-solid fa-clock"></i>
+                <span>Malaysia</span>
+              </div>
+              <h4>Tour To Satorini</h4>
+              <p> Amet consectetur. Vulputate commodo felis molestie risus .</p>
+
+              <h4 class="text-orange">Price: $1300-$1500</h4>
+              <div class="middle-desc"></div>
+              <button>Book Now</button>
+            </div>
+          </div>
+          <div class="image image-3">
+            <div class="float-card">
+              <div class="top-icons">
+                <i class="fa-solid fa-clock"></i>
+                <span>7 Day/6 Night</span>
+                <i class="fa-solid fa-clock"></i>
+                <span>Max : 10</span>
+                <i class="fa-solid fa-clock"></i>
+                <span>Malaysia</span>
+              </div>
+              <h4>Tour To Satorini</h4>
+              <p> Amet consectetur. Vulputate commodo felis molestie risus .</p>
+              <h4 class="text-orange">Price: $1300-$1500</h4>
+              <div class="middle-desc"></div>
+              <button>Book Now</button>
+            </div>
+          </div>
+         
+        </div>
+
+
+      </section>
+
+
+      <!-- deal discount section ends -->
     </main>
     <footer></footer>
   </body>
