simple - tour section mobile responsive finished

--- a/index.html
+++ b/index.html
@@ -294,12 +294,54 @@
           </div>
          
         </div>
+        <div class="deal-discount-bottom-button">
+          <button>See All packages</button>
+        </div>
 
 
       </section>
 
 
       <!-- deal discount section ends -->
+
+
+      <!-- simple place section starts  -->
+
+
+      <section class="simple-place-section popular-tours">
+        <div class="tour-details">
+          <h1>A Simple Perfect Place To Get Lost</h1>
+          <p>
+            Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. 
+          </p>
+          <ul>
+            <li>
+              <p>
+                Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.
+              </p>
+            </li>
+            <li>
+              <p>
+                Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.
+              </p>
+            </li>
+          </ul>
+          <p>
+            Amet consectetur. Vulputate commodo felis molestie risus ornare
+            nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+            Habitant adipiscing risus natoque aliquet. Id bibendum nunc senectus
+            semper tincidunt.
+          </p>
+          <button>Read Me</button>
+        </div>
+        <div class="tour-image">
+          <img src="./images/Group 40089.png" alt="" />
+        </div>
+      </section>
+
+
+
+      <!-- simple place section ends -->
     </main>
     <footer></footer>
   </body>
