newsletter section mobile responsive fineshed

--- a/index.html
+++ b/index.html
@@ -342,6 +342,31 @@
 
 
       <!-- simple place section ends -->
+
+      <section class="newsletter-section">
+        <div class="newsletter-form">
+          <h4>Newsletter</h4>
+          <p>Get your daily dose of travel news & tips. Sign up today!</p>
+          <hr>
+          <form action="">
+            <input type="text" placeholder="Enter your name">
+            <input type="email" placeholder="Enter your Email"><br>
+            <button>Subscribe</button>
+           
+
+          </form>
+        </div>
+        <div class="newsletter-image">
+          <div class="saving-card">
+            <h5>Travel.com</h5>
+            <h4 style="color: white;">Save up to 70%</h4>
+          </div>
+        </div>
+      </section>
+      
+
+      <!-- newsletter section ends -->
+
     </main>
     <footer></footer>
   </body>
