footer section mobile responsive finished

--- a/index.html
+++ b/index.html
@@ -368,6 +368,27 @@
       <!-- newsletter section ends -->
 
     </main>
-    <footer></footer>
+    
+    
+    <footer>
+
+     <div class="nav-logo">
+        <div class="left-side">
+          <div class="logo-image">
+            <img src="./images/Group 40071 (2).png" alt="">
+          </div>
+          <h1>Trip <span class="text-orange">Well</span> </h1></div>
+     </div>
+      <p>Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo erat maecenas vitae elementum ultricies nullam. </p>
+      <div class="icons">
+        <div><i class="fa-brands fa-twitter"></i></div>
+        <div><i class="fa-brands fa-facebook-f"></i></div>
+        <div><i class="fa-brands fa-instagram"></i></div>
+        <div><i class="fa-brands fa-github"></i></div>
+      </div>
+      <hr>
+      <p>2017, &copy; All Rights Reserved</p>
+
+    </footer>
   </body>
 </html>
