my extra section mobile responsive completed

--- a/index.html
+++ b/index.html
@@ -365,7 +365,34 @@
       </section>
       
 
-      <!-- newsletter section ends -->
+    <!-- newsletter section ends -->
+
+    <!-- my extra section starts  -->
+
+    <section class="my-extra-section">
+      <div class="live-chat">
+        <input type="text" class="input-box" placeholder="Chat with us">
+        <div class="round-btn">
+          <button>Send  <i class="fa-solid fa-arrow-right"></i> </button>
+        </div>
+      </div>
+      <h1>Contact Us with social links</h1>
+      <div class="card">
+        <div class="card-item card-item-1">
+          <i class="fa-brands fa-facebook-messenger"></i>
+        </div>
+        <div class="card-item card-item-2">
+          <i class="fa-brands fa-square-whatsapp"></i>
+        </div>
+        <div class="card-item card-item-3">
+          <i class="fa-solid fa-envelope-circle-check"></i>
+        </div>
+      </div>
+    </section>
+
+    <!-- my extra section ends -->
+
+
 
     </main>
     
@@ -388,7 +415,6 @@
       </div>
       <hr>
       <p>2017, &copy; All Rights Reserved</p>
-
     </footer>
   </body>
 </html>
