input and option areas problem fixed

--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
           </div>
           <div class="box box-3">
             <select name="" id="">
-              <option value="">When</option>
-              <option value="">February</option>
-              <option value="">March</option>
+              <option value="">Select Type</option>
+              <option value="">Moonson</option>
+              <option value="">Summer</option>
             </select>
           </div>
           <div class="box-4">
-            <button>Find Now</button>
+            <button><i style="margin-right:5px" class="fa-solid fa-magnifying-glass"></i>Find Now</button>
           </div>
         </div>
       </section>
