smome bug fixed

--- a/index.html
+++ b/index.html
@@ -245,9 +245,9 @@
               <div class="top-icons">
                 <i class="fa-solid fa-clock"></i>
                 <span>7 Day/6 Night</span>
-                <i class="fa-solid fa-clock"></i>
+                <i class="fa-solid fa-users"></i>
                 <span>Max : 10</span>
-                <i class="fa-solid fa-clock"></i>
+                <i class="fa-solid fa-location-dot"></i>
                 <span>Malaysia</span>
               </div>
               <h4>Tour To Satorini</h4>
@@ -262,9 +262,9 @@
               <div class="top-icons">
                 <i class="text-orange fa-solid fa-clock"></i>
                 <span>7 Day/6 Night</span>
-                <i class="fa-solid fa-clock"></i>
+                <i class="fa-solid fa-users"></i>
                 <span>Max : 10</span>
-                <i class="fa-solid fa-clock"></i>
+                <i class="fa-solid fa-location-dot"></i>
                 <span>Malaysia</span>
               </div>
               <h4>Tour To Satorini</h4>
@@ -280,9 +280,9 @@
               <div class="top-icons">
                 <i class="fa-solid fa-clock"></i>
                 <span>7 Day/6 Night</span>
-                <i class="fa-solid fa-clock"></i>
+                <i class="fa-solid fa-users"></i>
                 <span>Max : 10</span>
-                <i class="fa-solid fa-clock"></i>
+                <i class="fa-solid fa-location-dot"></i>
                 <span>Malaysia</span>
               </div>
               <h4>Tour To Satorini</h4>
