lorem ipsum are removed and added custom texts

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
       <section class="explore-section">
         <h3>Explore Your Travel</h3>
         <p>
-          Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor
-          adipiscing. In et odio enim ac quis sapien urna eu phasellus.
+          If you want to go outside the world, ger our services for secure traveling.
+          We provide most effective and most attracted offers to make your journey easier
         </p>
         <div class="search-boxes">
           <div class="box box-1">
@@ -78,7 +78,7 @@
           <div class="box box-3">
             <select name="" id="">
               <option value="">Select Type</option>
-              <option value="">Moonson</option>
+              <option value="">Monsoon</option>
               <option value="">Summer</option>
             </select>
           </div>
@@ -94,34 +94,27 @@
         <div class="tour-details">
           <h1>Our Popular Tours</h1>
           <p>
-            Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra
-            odio sit massa. Sodales dictumst nec nibh pellentesque.
+           Here our most popular tours over the world are given
           </p>
           <ul>
             <li>
               <p>
-                Tempus euismod lacus mauris dignissim quis in ultrices. Magna
-                nullam odio neque diam. Sociis erat at .
+                You can North American beautiful hilly scenario and enjoy there.
               </p>
             </li>
             <li>
               <p>
-                Adipiscing ornare pellentesque mauris volutpat tortor vitae
-                platea porta lacus. Lectus suspendisse nullam.
+                We also ensuring you to tour the seas and oceans by sea way
               </p>
             </li>
             <li>
               <p>
-                Accumsan eget et turpis praesent lorem egestas enim elit
-                bibendum. Risus at in.
+                Our another attractive tour is in winter season.
               </p>
             </li>
           </ul>
           <p>
-            Amet consectetur. Vulputate commodo felis molestie risus ornare
-            nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
-            Habitant adipiscing risus natoque aliquet. Id bibendum nunc senectus
-            semper tincidunt.
+           Cheer on with us and make your voyages and journey with more fun and more ease.
           </p>
           <button>Read Me</button>
         </div>
@@ -138,8 +131,8 @@
         <div class="destination-title">
           <h1>Choose Your Destination</h1>
           <p>
-            Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra
-            odio sit massa. Sodales dictumst nec nibh pellentesque.
+           Are you looking for a better solution for your boring life? Here we offering people to tour Bandarban,
+           Indonesia, maldives, Srilanka, North America, Kashmir, Bangladesh
           </p>
         </div>
         <div class="destination-images">
@@ -182,8 +175,8 @@
         <div class="why-choose-desc">
           <h1>Why Choose Us</h1>
           <p>
-            Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra
-            odio sit massa. Sodales dictumst nec nibh pellentesque.
+            Make your life easier with our best offers and most common tours which are 5 ratted by other people
+            If confusion, Search on youtube or google
           </p>
         </div>
         <div class="why-choose-cards">
@@ -194,9 +187,8 @@
                 </div>
                 <h4>Handpicked Hotels</h4>
                 <p>
-                  Amet consectetur. Vulputate commodo felis molestie risus ornare
-                  nulla amet et. Libero commodo sagittis dignissim adipiscing
-                  quis. Habitant adipiscing risus natoque aliquet.
+                 Are you worry about your meal and bavages ? We not only ensure the tour, We also provide fresh foods so that our 
+                 clients have no appetite for food.
                 </p>
              </div>
              <div class="card card-2">
@@ -205,20 +197,18 @@
                 </div>
                 <h4>World Class Service</h4>
                 <p>
-                  Amet consectetur. Vulputate commodo felis molestie risus ornare
-                  nulla amet et. Libero commodo sagittis dignissim adipiscing
-                  quis. Habitant adipiscing risus natoque aliquet.
+                 No other company or services can provide services like us. We are working and giving the most 
+                 applicable and interesting services for the clients
                 </p>
              </div>
             </div>
            <div class="bottom-card">
               <div class="card one-card">
                <div class="image-3"> <img src="./images/home.png" alt=""></div>
-               <h4>World Class Service</h4>
+               <h4>Best Price Guarantee</h4>
                   <p>
-                    Amet consectetur. Vulputate commodo felis molestie risus ornare
-                    nulla amet et. Libero commodo sagittis dignissim adipiscing
-                    quis. Habitant adipiscing risus natoque aliquet.
+                    All tour services are in cheep rate. Sometimes we provides discount more than 80 to 90 percent.
+                    And hence people over the world take our service without hegitate.
                   </p>
               </div>
            </div>
@@ -236,7 +226,7 @@
 
         <div class="deal-discount-desc">
           <h1>Deals & Discounts</h1>
-          <p> Amet consectetur. Vulputate commodo felis molestie risus .</p>
+          <p>Here most cheep discount are only for you and your best voyages</p>
 
         </div>
         <div class="deal-discount-images">
@@ -251,7 +241,7 @@
                 <span>Malaysia</span>
               </div>
               <h4>Tour To Satorini</h4>
-             <p> Amet consectetur. Vulputate commodo felis molestie risus .</p>
+             <p>Explore Satorini with the cheap rate. Make your tour funnier and easier</p>
               <h4 class="text-orange">Price: $1300-$1500</h4>
               <div class="middle-desc"></div>
               <button>Book Now</button>
@@ -268,7 +258,7 @@
                 <span>Malaysia</span>
               </div>
               <h4>Tour To Satorini</h4>
-              <p> Amet consectetur. Vulputate commodo felis molestie risus .</p>
+              <p>Explore Satorini with the cheap rate. Make your tour funnier and easier</p>
 
               <h4 class="text-orange">Price: $1300-$1500</h4>
               <div class="middle-desc"></div>
@@ -286,7 +276,7 @@
                 <span>Malaysia</span>
               </div>
               <h4>Tour To Satorini</h4>
-              <p> Amet consectetur. Vulputate commodo felis molestie risus .</p>
+              <p> Explore Satorini with the cheap rate. Make your tour funnier and easier</p>
               <h4 class="text-orange">Price: $1300-$1500</h4>
               <div class="middle-desc"></div>
               <button>Book Now</button>
@@ -312,25 +302,22 @@
         <div class="tour-details">
           <h1>A Simple Perfect Place To Get Lost</h1>
           <p>
-            Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. 
+           Hilly tours are always funny for everyone, You can tour most famous hills with us. 
           </p>
           <ul>
             <li>
               <p>
-                Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.
+                Another interesting part of our services is we have own vehicles and another necessary equipments
               </p>
             </li>
             <li>
               <p>
-                Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.
+                We have most amicable sarvents and other necessary people who can give you extra care for your tour.
               </p>
             </li>
           </ul>
           <p>
-            Amet consectetur. Vulputate commodo felis molestie risus ornare
-            nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
-            Habitant adipiscing risus natoque aliquet. Id bibendum nunc senectus
-            semper tincidunt.
+            So, be with us and enjoy your journey testy and beautiful.
           </p>
           <button>Read Me</button>
         </div>
@@ -391,22 +378,16 @@
     </section>
 
     <!-- my extra section ends -->
-
-
-
     </main>
-    
-    
-    <footer>
-
-     <div class="nav-logo">
+    <footer class="footer">
+      <div class="nav-logo">
         <div class="left-side">
           <div class="logo-image">
             <img src="./images/Group 40071 (2).png" alt="">
           </div>
           <h1>Trip <span class="text-orange">Well</span> </h1></div>
      </div>
-      <p>Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo erat maecenas vitae elementum ultricies nullam. </p>
+      <p> So, what is your opinion about our services, Don't forget to inform us. </p>
       <div class="icons">
         <div><i class="fa-brands fa-twitter"></i></div>
         <div><i class="fa-brands fa-facebook-f"></i></div>
