why choose section images updated

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
           <div class="two-cards">
              <div class="card card-1">
                 <div class="image-1">
-                  <img src="./images/home.png" alt="" />
+                  <img src="./images/hotel.png" alt="" />
                 </div>
                 <h4>Handpicked Hotels</h4>
                 <p>
@@ -193,7 +193,7 @@
              </div>
              <div class="card card-2">
                 <div class="image-2">
-                  <img src="./images/home.png" alt="" />
+                  <img src="./images/map.png" alt="" />
                 </div>
                 <h4>World Class Service</h4>
                 <p>
@@ -204,7 +204,7 @@
             </div>
            <div class="bottom-card">
               <div class="card one-card">
-               <div class="image-3"> <img src="./images/home.png" alt=""></div>
+               <div class="image-3"> <img src="./images/gift-card.png" alt=""></div>
                <h4>Best Price Guarantee</h4>
                   <p>
                     All tour services are in cheep rate. Sometimes we provides discount more than 80 to 90 percent.
