--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <img src="./images/Rectangle 11.png" alt="" />
           </div>
           <div class="image image-7">
-            <h1>Bandarban</h1>
+            <h1><span>Bandarban</span></h1>
             <img src="./images/Rectangle 10.png" alt="" />
           </div>
         </div>
